add_executable(openslide-show-properties tools/openslide-show-properties.c)
message(STATUS ${OPENSLIDE_DEP_LIBS})
target_include_directories(openslide-show-properties PUBLIC ${OPENSLIDE_INCLUDES})
target_link_libraries(openslide-show-properties LINK_PUBLIC openslide ${OPENSLIDE_DEP_LIBS})
add_executable(openslide-quickhash1sum tools/openslide-quickhash1sum.c)
target_include_directories(openslide-quickhash1sum PUBLIC ${OPENSLIDE_INCLUDES})
target_link_libraries(openslide-quickhash1sum openslide ${OPENSLIDE_DEP_LIBS})
add_executable(openslide-write-png tools/openslide-write-png.c)
target_include_directories(openslide-write-png PUBLIC ${OPENSLIDE_INCLUDES})
target_link_libraries(openslide-write-png openslide ${OPENSLIDE_DEP_LIBS})
