add_executable(openslide-show-properties openslide-show-properties.c)
target_include_directories(openslide-show-properties PUBLIC ${CMAKE_SOURCE_DIR}/include/)
target_link_libraries(openslide-show-properties PRIVATE ${PROJECT_NAME})
add_executable(openslide-quickhash1sum openslide-quickhash1sum.c)
target_include_directories(openslide-quickhash1sum PUBLIC ${CMAKE_SOURCE_DIR}/include/)
target_link_libraries(openslide-quickhash1sum PRIVATE ${PROJECT_NAME})
add_executable(openslide-write-png openslide-write-png.c)
target_include_directories(openslide-write-png PUBLIC ${CMAKE_SOURCE_DIR}/include/)
message(status ${CMAKE_SOURCE_DIR}/include/)
target_link_libraries(openslide-write-png PRIVATE ${PROJECT_NAME})
